# blog-project

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml
.cursor/commands/: commit-message.md
.github/workflows/: rust.yml
blog-cli/: Cargo.toml  README.md
blog-cli/src/: main.rs
blog-client/: Cargo.toml  README.md  build.rs
blog-client/proto/: blog.proto
blog-client/src/: blog_client.rs  error.rs  grpc_client.rs  http_client.rs  lib.rs  post.rs  traits.rs  user.rs
blog-frontend/: Cargo.toml  Dockerfile  PLAN.md  README.md  Trunk.toml  index.html  nginx.conf  style.css
blog-frontend/src/: api.rs  auth.rs  lib.rs  types.rs
blog-frontend/src/components/: mod.rs  navbar.rs  post_detail.rs  post_form.rs  post_from.rs  post_list.rs
blog-frontend/src/pages/: login.rs  mod.rs  post_create.rs  post_edit.rs  register.rs
blog-server/: Cargo.toml  Dockerfile  README.md  build.rs
blog-server/migrations/: 20260118000001_create_users.sql  20260118000002_create_posts.sql
blog-server/proto/: blog.proto
blog-server/src/: main.rs
blog-server/src/application/: auth_service.rs  blog_service.rs  jwt_service.rs  mod.rs
blog-server/src/data/: db_post_repository.rs  db_user_repository.rs  in_memory_post_repository.rs  in_memory_user_repository.rs  mod.rs  post_repository.rs  post_repository_trait.rs  user_repository.rs  user_repository_trait.rs
blog-server/src/domain/: error.rs  post.rs  user.rs
blog-server/src/infrastructure/: app_state.rs  database.rs  hash.rs  jwt.rs  logging.rs  mod.rs
blog-server/src/presentation/: grpc_service.rs  http_handlers.rs  http_protected.rs  http_public.rs  middleware.rs  mod.rs
