[workspace]
members = [
    "blog-server",
    "blog-client",
    "blog-cli",
    "blog-wasm",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
clap = { version = "4.4", features = ["derive"] }
wasm-bindgen = "0.2"
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"
