[workspace]
members = [
    "blog-server",
    "blog-client",
    "blog-cli",
    "blog-wasm",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
clap = { version = "4.4", features = ["derive"] }
wasm-bindgen = "0.2"
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"
actix-web = "4.4"
actix-web-httpauth = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
jsonwebtoken = "9.2"
tracing = "0.1"
#tracing-subscriber = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }


