[package]
name = "blog-frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos        = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
gloo-net      = { version = "0.6", features = ["http"] }
gloo-storage  = "0.3"
serde         = { workspace = true }
serde_json    = { workspace = true }
wasm-bindgen  = "0.2"
js-sys        = "0.3"
chrono        = { workspace = true }
