[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
tonic-reflection = "0.11"
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }
actix-web = { workspace = true }
actix-web-httpauth = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
futures-util = "0.3"
actix-cors = "0.7"
validator = { version = "0.19", features = ["derive"] }

[build-dependencies]
tonic-build = { workspace = true }
